feat: #12 users can be created in the backend